--- a/portfolio.html
+++ b/portfolio.html
@@ -18,22 +18,20 @@
     <!--Шапка-->
     <header class="header">
         <div class="container">
-            <nav class="navigation">
-                <a class="nav-logo" href="/"><span class="header-logo">Web</span>Studio</a>
-                <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fair">Студия</span></a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
-                </ul>
-            </nav>
-            <ul class="contact-list">
-                <li class="contact-item"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contact-item"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <nav class="navigation">
+            <a class="nav-logo" href="/"><span class="header-logo">Web</span>Studio</a>
+            <ul class="nav-list">
+              <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fair">Студия</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+              <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
             </ul>
+          </nav>
+          <ul class="contact-list">
+            <li class="contact-item"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-item"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
         </div>
-    </header>
+      </header>
 
     <!--Основной контент-->
     <main>
