--- a/portfolio.html
+++ b/portfolio.html
@@ -35,56 +35,56 @@
 
     <!--Основной контент-->
     <main>
-        <ul>
-            <li><button class="button-slice" type="button">Все</button></li>
-            <li><button class="button-slice" type="button">Веб-сайты</button></li>
-            <li><button class="button-slice" type="button">Приложения</button></li>
-            <li><button class="button-slice" type="button">Дизайн</button></li>
-            <li><button class="button-slice" type="button">Маркетинг</button></li>
+        <ul class="porfolio-navigation">
+            <li class="port-nav-item"><button class="button-slice" type="button">Все</button></li>
+            <li class="port-nav-item"><button class="button-slice" type="button">Приложения</button></li>
+            <li class="port-nav-item"><button class="button-slice" type="button">Дизайн</button></li>
+            <li class="port-nav-item"><button class="button-slice" type="button">Маркетинг</button></li>
+            <li class="port-nav-item"><button class="button-slice" type="button">Веб-сайты</button></li>
         </ul>
 
         <ul class="main-portfolio">
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(7).jpg" alt="На ноутбуке открыта веб-страница" width="370" height="294">
                 <h3 class="porfolio-header">Технокряк</h3>
                 <p class="portfolio-text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(8).jpg" alt="Парни играют в баскетбол" width="370" height="294">
                 <h3 class="porfolio-header">Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-text">Дизайн</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(9).jpg" alt="Логотип ресторана" width="370" height="294">
                 <h3 class="porfolio-header">Ресторан Seafood</h3>
                 <p class="portfolio-text">Приложение</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(10).jpg" alt="Наушники" width="370" height="294">
                 <h3 class="porfolio-header">Проект Prime</h3>
                 <p class="portfolio-text">Маркетинг</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(11).jpg" alt="Две коробки" width="370" height="294">
                 <h3 class="porfolio-header">Проект Boxes</h3>
                 <p class="portfolio-text">Маркетинг</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(12).jpg" alt="На мониторе открыт мировой веб-сайт" width="370" height="294">
                 <h3 class="porfolio-header" lang="en">Inspiration has no Borders</h3>
                 <p class="portfolio-text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(13).jpg" alt="Женский журнал" width="370" height="294">
                 <h3 class="porfolio-header">Издание Limited Edition</h3>
                 <p class="portfolio-text">Дизайн</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(14).jpg" alt="Бирка проекта" width="370" height="294">
                 <h3 class="porfolio-header">Проект LAB</h3>
                 <p class="portfolio-text">Маркетинг</p>
             </li>
-            <li>
+            <li class="main-port-item">
                 <img src="./images/img(15).jpg" alt="Работа в приложении" width="370" height="294">
                 <h3 class="porfolio-header" lang="en">Growing Business</h3>
                 <p class="portfolio-text">Приложение</p>
