--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!--Чем мы занимаемся-->
     <section class="main-works">
       <h2 class="works-header">Чем мы занимаемся</h2>
-      <div class="container-works"></div>
+      <div class="container-works">
       <ul class="work-list">
         <li class="work-item">
           <img src="./images/img.jpg" alt="write html" width="370" height="294">
