--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
             <nav class="navigation">
                 <a class="nav-logo" href="./"><span class="header-logo">Web</span>Studio</a>
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fair">Студия</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Студия</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="./portfolio.html"><span class="fair">Портфолио</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
                 </ul>
             </nav>
