--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         <a class="footer-logo" href="./"><span class="header-logo">Web</span>Studio</a>
         <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
-          <li><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-contact-item"><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="footer-contact-item"><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </div>
