--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 
     <!--Основной контент-->
     <main>
-        <div class="container main-portfolio-content">
+        <section class="container main-portfolio-content">
             <div class="menu-navigation">
                 <ul class="porfolio-navigation">
                     <li><button class="button-slice" type="button">Все</button></li>
@@ -113,7 +113,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
 
     </main>
 
